<resources>
    <string name="app_name">moa</string>

    <string name="action_settings">Settings</string>
    <string name="app_title">moa</string>

    <!--Facebook App Id-->
    <string name="facebook_app_id">1395271860786033</string>

    <!--Twitter Id-->
    <string name="twitter_api_key">FZNg3owohTlgdfHf8RHR6waYj</string>
    <string name="twitter_api_secret">eNIpIfBPjJbzsCM4CwyqnspPNEl8utPXILH0fvCMhdEWteP4Y6</string>

    <!--Sign in Button Name-->
    <string name="sign_in_google">Sign in with Google+</string>

    <!--Tab Names-->
    <string name="feed">Feed</string>
    <string name="saved">Saved</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>

    <!--Date Format-->
    <string name="formatted_date">%1$s %2$d, %3$d</string>

    <!--Titles-->
    <string name="recommended_articles">Recommended Articles</string>
    <string name="archive">Archive</string>
    <string name="related_products">Related Products</string>
    <string name="from_magazine_name">From %1$s</string>
    <string name="purchase">Buy</string>

    <!--ImageView ContentDescription-->
    <string name="image_placeholder">image</string>
    <string name="search_icon">search_icon</string>
    <string name="hearts">hearts</string>

    <!--String Placeholder-->
    <string name="article_title">Article Title</string>
    <string name="search_hint">Search</string>
    <string name="description_placeholder">This is the newest in Holiday Fashion for Spring 2015! Get it while it\'s hot.</string>
    <string name="magazine_name">Magazine Name</string>
    <string name="comments_placeholder">Comments</string>
    <string name="tag1">#tag1</string>
    <string name="tag2">#tag2</string>
    <string name="count_ten">10</string>
    <string name="article_date">Jan 1st, 2014</string>
    <string name="product_name">Product Name</string>
    <string name="comment_good_1">This is a great article.</string>
    <string name="comment_good_2">Absolutely stunning!</string>
    <string name="sample_price">$%1$d.%2$d</string>
</resources>
