<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <LinearLayout
        android:id="@+id/parent_tabs"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/feed_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:drawableTop="@drawable/feed_icon"
            android:text="@string/feed"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/tab_selector"/>
        <TextView
            android:id="@+id/saved_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:drawableTop="@drawable/heart"
            android:text="@string/saved"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/tab_selector"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:drawableTop="@drawable/chat_icon"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/tab_selector"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:drawableTop="@drawable/settings_icon"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/tab_selector"/>
    </LinearLayout>
</LinearLayout>