<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="32dp"
        android:paddingStart="32dp"
        android:paddingRight="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:id="@+id/tags"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tag1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag1"
                android:background="#ffc6c6c6"
                android:padding="5dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/index1"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image_placeholder" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments_placeholder" />

        <LinearLayout
            android:id="@+id/related_products"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <com.pichangetheworld.moasample.view.CustomImageView
                android:src="@drawable/gucci_bag_256"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <com.pichangetheworld.moasample.view.CustomImageView
                android:src="@drawable/gucci_bag_256"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <com.pichangetheworld.moasample.view.CustomImageView
                android:src="@drawable/gucci_bag_256"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <com.pichangetheworld.moasample.view.CustomImageView
                android:src="@drawable/gucci_bag_256"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommended_articles"/>

        <LinearLayout
            android:id="@+id/other_articles"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index10"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index11"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index12"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>