<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="32dp"
        android:paddingStart="32dp"
        android:paddingRight="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magazine_name"
            android:textSize="32sp"
            android:background="#ff5f5f5f"
            android:textColor="#ffffff"
            android:padding="12dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommended_articles"
            android:background="#ff808080"
            android:textColor="#ffffff"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"/>

        <LinearLayout
            android:id="@+id/recommended_articles"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index10"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index11"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index12"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/archive"
            android:background="#ff808080"
            android:textColor="#ffffff"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"/>

        <LinearLayout
            android:id="@+id/archived_articles"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index7"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index8"/>
            <com.pichangetheworld.moasample.view.CustomImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/index9"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>